# third_party_node

./: .gitattributes  BUILD.gn  Makefile  OAT.xml  README.OpenSource  README.en.md  README.md  bundle.json  common.gypi  configure.py  node.gyp  node.gypi
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
BasicServicesKit/: BUILD.gn  libos_account.ndk.json  ohprint.h  ohprint.ndk.json  os_account.h  os_account_common.h
ai/neural_network_runtime/: BUILD.gn  libneural_network_core.ndk.json  libneural_network_runtime.ndk.json  neural_network_core.h  neural_network_runtime.h  neural_network_runtime_compat.h  neural_network_runtime_type.h
arkui/ace_engine/native/: BUILD.gn  libace.ndk.json  native_animate.h  native_dialog.h  native_event.h  native_gesture.h  native_interface.h  native_interface_xcomponent.cpp  native_interface_xcomponent.h  native_node.h  native_node_napi.h  native_type.h  ui_input_event.h
arkui/napi/: BUILD.gn  common.h  libnapi.ndk.json  native_api.h
capi_parser/: readme.md  requirements.txt
communication/netmanager_base/netconnclient/: BUILD.gn  libnet_connection.ndk.json
communication/netmanager_base/netconnclient/src/: native_net_conn_api.cpp
distributeddatamgr/relational_store/: BUILD.gn  libnative_rdb.ndk.json
distributeddatamgr/relational_store/include/: data_asset.h  oh_cursor.h  oh_predicates.h  oh_value_object.h  oh_values_bucket.h  relational_store.h
docs/: capi_naming.md  howto_add.md  user_guide.md
graphic/graphic_2d/GLES2/: BUILD.gn  libGLESv2.ndk.json
graphic/graphic_2d/native_drawing/: BUILD.gn  drawing_bitmap.h  drawing_brush.h  drawing_canvas.h  drawing_color.h  drawing_color_filter.h  drawing_color_space.h  drawing_filter.h  drawing_font.h  drawing_font_collection.h  drawing_font_mgr.h  drawing_gpu_context.h  drawing_image.h  drawing_mask_filter.h  drawing_matrix.h  drawing_memory_stream.h  drawing_path.h  drawing_path_effect.h  drawing_pen.h  drawing_pixel_map.h  drawing_point.h  drawing_rect.h  drawing_region.h  drawing_round_rect.h  drawing_sampling_options.h  drawing_shader_effect.h  drawing_shadow_layer.h  drawing_surface.h  drawing_text_blob.h  drawing_text_declaration.h  drawing_text_typography.h  drawing_typeface.h  drawing_types.h  libnative_drawing.ndk.json
graphic/graphic_2d/vulkan/: BUILD.gn  libvulkan.ndk.json
multimedia/av_codec/: BUILD.gn  avcodec_audio_channel_layout.h  native_avcapability.h  native_avcodec_audiocodec.h  native_avcodec_audiodecoder.h  native_avcodec_audioencoder.h  native_avcodec_base.h  native_avcodec_videodecoder.h  native_avcodec_videoencoder.h  native_avdemuxer.h  native_avmemory.h  native_avmuxer.h  native_avsource.h
multimedia/av_codec/audio_codec/: BUILD.gn  libnative_media_acodec.ndk.json
multimedia/av_codec/audio_decoder/: BUILD.gn  libnative_media_adec.ndk.json
multimedia/av_codec/audio_encoder/: BUILD.gn  libnative_media_aenc.ndk.json
multimedia/av_codec/avdemuxer/: BUILD.gn  libnative_media_avdemuxer.ndk.json
multimedia/av_codec/avmuxer/: BUILD.gn  libnative_media_avmuxer.ndk.json
multimedia/av_codec/avsource/: BUILD.gn  libnative_media_avsource.ndk.json
multimedia/av_codec/codec_base/: BUILD.gn  libnative_media_codecbase.ndk.json
multimedia/av_codec/core/: BUILD.gn  libnative_media_core.ndk.json
multimedia/av_codec/video_decoder/: BUILD.gn  libnative_media_vdec.ndk.json
multimedia/av_codec/video_encoder/: BUILD.gn  libnative_media_venc.ndk.json
multimedia/camera_framework/: BUILD.gn  camera.h  camera.ndk.json  camera_input.h  camera_manager.h  capture_session.h  metadata_output.h  photo_output.h  preview_output.h  video_output.h
multimedia/drm_framework/: BUILD.gn  libnative_drm.ndk.json  libnativedrm.ndk.json  native_mediakeysession.h  native_mediakeysystem.h
multimedia/drm_framework/common/: native_drm_base.h  native_drm_common.h  native_drm_err.h  native_drm_object.h
multimedia/drm_framework/include/: BUILD.gn  libnative_drm.ndk.json  native_mediakeysession.h  native_mediakeysystem.h
multimedia/image_framework/: BUILD.gn  libimage_ndk.ndk.json  libimage_packer.ndk.json  libimage_packer_ndk.ndk.json  libimage_pixelmap_napi.ndk.json  libimage_receiver.ndk.json  libimage_receiver_ndk.ndk.json  libimage_source.ndk.json  libimage_source_ndk.ndk.json  libohimage.ndk.json  libpixelmap.ndk.json
multimedia/image_framework/include/: image_mdk.h  image_packer_mdk.h  image_pixel_map_mdk.h  image_pixel_map_napi.h  image_receiver_mdk.h  image_source_mdk.h
multimedia/image_framework/include/image/: image_common.h  image_native.h  image_packer_native.h  image_receiver_native.h  image_source_native.h  pixelmap_native.h
multimedia/image_framework/ndk_test_example/: @ohos.xtstest.mypixelmap.d.ts  BUILD.gn
multimedia/media_foundation/core/: BUILD.gn
multimedia/media_library/media_asset_manager/: BUILD.gn  lib_media_asset_namager_capi.ndk.json
multimedia/player_framework/avplayer/: BUILD.gn  libavplayer.ndk.json
network/netmanager/: BUILD.gn  libnet_connection.ndk.json
network/netmanager/include/: native_net_conn_api.h  net_connection.h  net_connection_type.h
network/netssl/: BUILD.gn  libnet_ssl_c.json
network/netssl/include/: net_ssl_c.h  net_ssl_c_type.h
resourceschedule/ffrt/: BUILD.gn  ffrt.h  ffrt.ndk.json
resourceschedule/ffrt/c/: condition_variable.h  loop.h  mutex.h  queue.h  sleep.h  task.h  timer.h  type_def.h
security/asset/: BUILD.gn  libasset.ndk.json
security/asset/inc/: asset_api.h  asset_type.h
tee/: BUILD.gn  libteec.ndk.json
tee/include/: oemkey.h  pthread_attr.h  rpmb_driver_rw_api.h  rpmb_fcntl.h  tee_arith_api.h  tee_client_api.h  tee_client_constants.h  tee_client_type.h  tee_core_api.h  tee_crypto_api.h  tee_crypto_hal.h  tee_defines.h  tee_drv_client.h  tee_dynamic_srv.h  tee_ext_api.h  tee_hw_ext_api_legacy.h  tee_log.h  tee_mem_mgmt_api.h  tee_mem_monitoring_api.h  tee_object_api.h  tee_time_api.h  tee_trusted_storage_api.h
web/webview/interfaces/native/: BUILD.gn  arkweb_error_code.h  arkweb_interface.h  arkweb_net_error_list.h  arkweb_scheme_handler.h  arkweb_type.h  libohweb.ndk.json  native_interface_arkweb.h
(+351 files in other folders)
