# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_ndk_library("libteec") {
  output_name = "teec"
  output_extension = "so"
  ndk_description_file = "./libteec.ndk.json"
  min_compact_version = "12"
  system_capability = "SystemCapability.Tee.TeeClient"
  system_capability_headers = [
    "./include/tee_client_api.h",
    "./include/tee_client_constants.h",
    "./include/tee_client_type.h",
  ]
}

ohos_ndk_headers("libtee_header") {
  dest_dir = "$ndk_headers_out_dir/tee"
  sources = [
    "./include/oemkey.h",
    "./include/rpmb_driver_rw_api.h",
    "./include/rpmb_fcntl.h",
    "./include/tee_arith_api.h",
    "./include/tee_core_api.h",
    "./include/tee_crypto_api.h",
    "./include/tee_crypto_hal.h",
    "./include/tee_defines.h",
    "./include/tee_drv_client.h",
    "./include/tee_dynamic_srv.h",
    "./include/tee_ext_api.h",
    "./include/tee_hw_ext_api.h",
    "./include/tee_hw_ext_api_legacy.h",
    "./include/tee_internal_se_api.h",
    "./include/tee_log.h",
    "./include/tee_mem_mgmt_api.h",
    "./include/tee_mem_monitoring_api.h",
    "./include/tee_object_api.h",
    "./include/tee_property_api.h",
    "./include/tee_rtc_time_api.h",
    "./include/tee_service_public.h",
    "./include/tee_sharemem_ops.h",
    "./include/tee_time_api.h",
    "./include/tee_trusted_storage_api.h",
    "./include/tee_tui_gp_api.h",
  ]
}

ohos_ndk_headers("libteec_header") {
  dest_dir = "$ndk_headers_out_dir/tee_client"
  sources = [
    "./include/tee_client_api.h",
    "./include/tee_client_constants.h",
    "./include/tee_client_type.h",
  ]
}

group("tee_ndk_header") {
  deps = [
    ":libtee_header",
    ":libteec_header",
  ]
}
