# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_ndk_library("libneural_network_core_ndk") {
  output_name = "neural_network_core"
  output_extension = "so"
  ndk_description_file = "libneural_network_core.ndk.json"
  min_compact_version = "11"
  system_capability = "SystemCapability.AI.NeuralNetworkRuntime"
  system_capability_headers = [
    "neural_network_core.h",
    "neural_network_runtime_type.h",
  ]
}

ohos_ndk_library("libneural_network_runtime_ndk") {
  output_name = "neural_network_runtime"
  output_extension = "so"
  ndk_description_file = "libneural_network_runtime.ndk.json"
  min_compact_version = "9"
  system_capability = "SystemCapability.AI.NeuralNetworkRuntime"
  system_capability_headers = [
    "neural_network_runtime.h",
    "neural_network_runtime_type.h",
  ]
}

ohos_ndk_headers("libneural_network_runtime_header") {
  dest_dir = "$ndk_headers_out_dir/neural_network_runtime"
  sources = [
    "neural_network_core.h",
    "neural_network_runtime.h",
    "neural_network_runtime_type.h",
  ]
}
