# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


import("//build/ohos.gni")


ohos_ndk_library("libnapi_ndk") {
  ndk_description_file = "./libnapi.ndk.json"
  min_compact_version = "1"
  output_name = "ace_napi"
}

ohos_ndk_headers("napi_header") {
  dest_dir = "$ndk_headers_out_dir/napi"
  sources = [
    "./common.h",
    "./native_api.h",
  ]
}