# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")
import("//foundation/distributeddatamgr/relational_store/relational_store.gni")

ohos_ndk_headers("native_rdb_ndk_header") {
  dest_dir = "$ndk_headers_out_dir/database/rdb/"
  sources = [
    "./include/oh_cursor.h",
    "./include/oh_predicates.h",
    "./include/oh_value_object.h",
    "./include/oh_values_bucket.h",
    "./include/relational_store.h",
    "./include/relational_store_error_code.h",
  ]
}

ohos_ndk_headers("data_ndk_header") {
  dest_dir = "$ndk_headers_out_dir/database/data/"
  sources = [ "./include/data_asset.h" ]
}

ohos_ndk_library("libnative_rdb_ndk") {
  output_name = "native_rdb_ndk"
  system_capability =
      "SystemCapability.DistributedDataManager.RelationalStore.Core"
  ndk_description_file = "./libnative_rdb.ndk.json"
  min_compact_version = "11"
  system_capability_headers = [
    "$ndk_headers_out_dir/database/data/data_asset.h",
    "$ndk_headers_out_dir/database/rdb/oh_cursor.h",
    "$ndk_headers_out_dir/database/rdb/oh_predicates.h",
    "$ndk_headers_out_dir/database/rdb/oh_value_object.h",
    "$ndk_headers_out_dir/database/rdb/oh_values_bucket.h",
    "$ndk_headers_out_dir/database/rdb/relational_store.h",
    "$ndk_headers_out_dir/database/rdb/relational_store_error_code.h",
  ]
}
