# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/av_codec/config.gni")

group("capi_packages") {
  deps = []
  if (av_codec_support_capi) {
    deps += [
      "$av_codec_root_dir/interfaces/kits/c:native_media_adec",
      "$av_codec_root_dir/interfaces/kits/c:native_media_aenc",
      "$av_codec_root_dir/interfaces/kits/c:native_media_avdemuxer",
      "$av_codec_root_dir/interfaces/kits/c:native_media_avmuxer",
      "$av_codec_root_dir/interfaces/kits/c:native_media_avsource",
      "$av_codec_root_dir/interfaces/kits/c:native_media_codecbase",
      "$av_codec_root_dir/interfaces/kits/c:native_media_core",
      "$av_codec_root_dir/interfaces/kits/c:native_media_vdec",
      "$av_codec_root_dir/interfaces/kits/c:native_media_venc",
    ]
  }
}

config("av_codec_capi_config") {
  include_dirs = [
    "$av_codec_root_dir/frameworks/native/capi/common",
    "$av_codec_root_dir/interfaces/inner_api/native",
    "$av_codec_root_dir/interfaces/kits/c",
    "$av_codec_root_dir/services/dfx/include",
    "$av_codec_root_dir/services/utils/include",
    "//foundation/graphic/graphic_2d/frameworks/surface/include",
  ]

  cflags = [
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-all",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-Wformat=2",
    "-Wdate-time",
  ]

  cflags_cc = [
    "-std=c++17",
    "-fno-rtti",
  ]
}

ohos_shared_library("native_media_core") {
  install_enable = true

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "../../../cfi_blocklist.txt"
  }

  configs = [ ":av_codec_capi_config" ]

  sources = [
    "$av_codec_root_dir/frameworks/native/capi/common/native_avformat.cpp",
    "$av_codec_root_dir/frameworks/native/capi/common/native_avmemory.cpp",
  ]

  if (av_codec_support_codeclist) {
    sources += [ "$av_codec_root_dir/frameworks/native/capi/common/native_avcapability.cpp" ]
  }

  deps = [
    "$av_codec_root_dir/interfaces/inner_api/native:av_codec_client",
    "$av_codec_root_dir/services/utils:av_codec_format",
  ]

  external_deps = [
    "graphic_2d:surface",
    "hilog:libhilog",
  ]
  output_extension = "so"
  subsystem_name = "multimedia"
  part_name = "av_codec"
}

ohos_shared_library("native_media_avmuxer") {
  install_enable = true
  sources = [
    "$av_codec_root_dir/frameworks/native/capi/avcodec/native_avcodec_base.cpp",
    "$av_codec_root_dir/frameworks/native/capi/avmuxer/native_avmuxer.cpp",
    "$av_codec_root_dir/frameworks/native/capi/common/native_avformat.cpp",
    "$av_codec_root_dir/frameworks/native/capi/common/native_avmemory.cpp",
  ]

  public_configs = [ ":av_codec_capi_config" ]

  deps = [
    "$av_codec_root_dir/interfaces/inner_api/native:av_codec_client",
    "$av_codec_root_dir/services/utils:av_codec_format",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
  output_extension = "so"
  subsystem_name = "multimedia"
  part_name = "av_codec"
}

ohos_shared_library("native_media_avdemuxer") {
  install_enable = true
  sources = [
    "$av_codec_root_dir/frameworks/native/capi/avdemuxer/native_avdemuxer.cpp",
  ]

  public_configs = [ ":av_codec_capi_config" ]

  deps = [
    "$av_codec_root_dir/interfaces/inner_api/native:av_codec_client",
    "$av_codec_root_dir/interfaces/kits/c:native_media_core",
    "$av_codec_root_dir/services/utils:av_codec_format",
  ]

  external_deps = [
    "c_utils:utils",
    "graphic_2d:surface",
    "hilog:libhilog",
  ]
  output_extension = "so"
  subsystem_name = "multimedia"
  part_name = "av_codec"
}

ohos_shared_library("native_media_avsource") {
  install_enable = true
  sources = [
    "$av_codec_root_dir/frameworks/native/capi/avsource/native_avsource.cpp",
  ]

  public_configs = [ ":av_codec_capi_config" ]

  deps = [
    "$av_codec_root_dir/interfaces/inner_api/native:av_codec_client",
    "$av_codec_root_dir/interfaces/kits/c:native_media_core",
    "$av_codec_root_dir/services/utils:av_codec_format",
  ]

  external_deps = [
    "c_utils:utils",
    "graphic_2d:surface",
    "hilog:libhilog",
  ]
  output_extension = "so"
  subsystem_name = "multimedia"
  part_name = "av_codec"
}

ohos_shared_library("native_media_codecbase") {
  install_enable = true
  sources = [
    "$av_codec_root_dir/frameworks/native/capi/avcodec/native_avcodec_base.cpp",
  ]

  public_configs = [ ":av_codec_capi_config" ]

  external_deps = [ "hilog:libhilog" ]
  output_extension = "so"
  subsystem_name = "multimedia"
  part_name = "av_codec"
}

ohos_shared_library("native_media_adec") {
  install_enable = true
  sources = [ "$av_codec_root_dir/frameworks/native/capi/avcodec/native_audio_decoder.cpp" ]

  public_configs = [ ":av_codec_capi_config" ]

  deps = [
    "$av_codec_root_dir/interfaces/inner_api/native:av_codec_client",
    "$av_codec_root_dir/interfaces/kits/c:native_media_codecbase",
    "$av_codec_root_dir/interfaces/kits/c:native_media_core",
    "$av_codec_root_dir/services/dfx:av_codec_service_dfx",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
  output_extension = "so"
  subsystem_name = "multimedia"
  part_name = "av_codec"
}

ohos_shared_library("native_media_aenc") {
  install_enable = true
  sources = [ "$av_codec_root_dir/frameworks/native/capi/avcodec/native_audio_encoder.cpp" ]

  public_configs = [ ":av_codec_capi_config" ]

  deps = [
    "$av_codec_root_dir/interfaces/inner_api/native:av_codec_client",
    "$av_codec_root_dir/interfaces/kits/c:native_media_codecbase",
    "$av_codec_root_dir/interfaces/kits/c:native_media_core",
    "$av_codec_root_dir/services/dfx:av_codec_service_dfx",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
  output_extension = "so"
  subsystem_name = "multimedia"
  part_name = "av_codec"
}

ohos_shared_library("native_media_vdec") {
  install_enable = true
  sources = [ "$av_codec_root_dir/frameworks/native/capi/avcodec/native_video_decoder.cpp" ]

  public_configs = [ ":av_codec_capi_config" ]

  deps = [
    "$av_codec_root_dir/interfaces/inner_api/native:av_codec_client",
    "$av_codec_root_dir/interfaces/kits/c:native_media_codecbase",
    "$av_codec_root_dir/interfaces/kits/c:native_media_core",
    "$av_codec_root_dir/services/dfx:av_codec_service_dfx",
  ]

  external_deps = [
    "c_utils:utils",
    "graphic_2d:surface",
    "hilog:libhilog",
  ]
  output_extension = "so"
  subsystem_name = "multimedia"
  part_name = "av_codec"
}

ohos_shared_library("native_media_venc") {
  install_enable = true
  sources = [ "$av_codec_root_dir/frameworks/native/capi/avcodec/native_video_encoder.cpp" ]

  public_configs = [ ":av_codec_capi_config" ]

  deps = [
    "$av_codec_root_dir/interfaces/inner_api/native:av_codec_client",
    "$av_codec_root_dir/interfaces/kits/c:native_media_codecbase",
    "$av_codec_root_dir/interfaces/kits/c:native_media_core",
    "$av_codec_root_dir/services/dfx:av_codec_service_dfx",
  ]

  external_deps = [
    "c_utils:utils",
    "graphic_2d:surface",
    "hilog:libhilog",
  ]
  output_extension = "so"
  subsystem_name = "multimedia"
  part_name = "av_codec"
}
