# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_ndk_headers("camera_ndk_header") {
  dest_dir = "$ndk_headers_out_dir/ohcamera"
  sources = [
    "./camera.h",
    "./camera_input.h",
    "./camera_manager.h",
    "./capture_session.h",
    "./metadata_output.h",
    "./photo_output.h",
    "./preview_output.h",
    "./video_output.h",
  ]
}

ohos_ndk_library("libohcamera") {
  output_name = "ohcamera"
  output_extension = "so"
  ndk_description_file = "./camera.ndk.json"
  system_capability = "SystemCapability.Multimedia.Camera.Core"
  system_capability_headers = [
    "ohcamera/camera.h",
    "ohcamera/camera_manager.h",
    "ohcamera/camera_input.h",
    "ohcamera/capture_session.h",
    "ohcamera/metadata_output.h",
    "ohcamera/photo_output.h",
    "ohcamera/preview_output.h",
    "ohcamera/video_output.h",
  ]
}
