# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")

DRM_ROOT_DIR = "//foundation/multimedia/drm_framework"

group("drm_capi_package") {
    deps = []
    deps += [
        "$DRM_ROOT_DIR/interfaces/kits/c/drm_capi:native_drm",
    ]
}

config("drm_capi_common_config") {
    include_dirs = [
        "$DRM_ROOT_DIR/interfaces/kits/c/drm_capi/include",
        "$DRM_ROOT_DIR/interfaces/kits/c/drm_capi/common",
        "$DRM_ROOT_DIR/interfaces/inner_api/native/drm",
        "$DRM_ROOT_DIR/services/utils/include",
        "//foundation//arkui/napi/interfaces/kits",
        "//utils/system/safwk/native/include",
        "//foundation/multimedia/drm_framework/frameworks/native/drm",
    ]
    cflags = [
        "-fno-exceptions",
        "-Wall",
        "-fno-common",
        "-fstack-protector-all",
        "-Wshadow",
        "-FPIC",
        "-FS",
        "-O2",
        "-D_FORTIFY_SOURCE=2",
        "-Wformat=2",
        "-Wdate-time",
    ]

    cflags_cc = [
        "-std=c++17",
        "-fno-rtti",
    ]
}

ohos_shared_library("native_drm") {
    install_enable = true
    configs = [ ":drm_capi_common_config" ]

    sanitize = {
        cfi = true
        cfi_cross_dso = true
        debug = true
    }

    sources = [
        "$DRM_ROOT_DIR/frameworks/c/drm_capi/native_mediakeysystem.cpp",
        "$DRM_ROOT_DIR/frameworks/c/drm_capi/native_mediakeysession.cpp",
    ]

    deps = [
        "$DRM_ROOT_DIR/frameworks/native:drm_framework",
    ]

    external_deps = [
        "c_utils:utils",
        "hilog:libhilog",
        "hitrace:hitrace_meter",
        "napi:ace_napi",
    ]
    output_extension = "so"
    subsystem_name = "multimedia"
    part_name = "multimedia_drm_framework"
}

