# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/netstack/netstack_config.gni")

ohos_ndk_library("libnet_ssl_ndk") {
  output_name = "net_ssl"
  output_extension = "so"
  ndk_description_file = "./libnet_ssl_c.json"
  min_compact_version = "1"
  system_capability = "SystemCapability.Communication.Netstack"

  system_capability_headers = [
    "network/netstack/net_ssl/net_ssl_c.h",
    "network/netstack/net_ssl/net_ssl_c_type.h",
  ]
}

ohos_ndk_headers("net_ssl_header") {
  dest_dir = "$ndk_headers_out_dir/network/netstack/net_ssl"
  sources = [
    "include/net_ssl_c.h",
    "include/net_ssl_c_type.h",
  ]
}
