# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_ndk_headers("ffrt_header") {
  dest_dir = "$ndk_headers_out_dir/ffrt"
  sources = [
    "c/condition_variable.h",
    "c/loop.h",
    "c/mutex.h",
    "c/queue.h",
    "c/sleep.h",
    "c/task.h",
    "c/timer.h",
    "c/type_def.h",
  ]
}

ohos_ndk_library("libffrt_ndk") {
  output_name = "ffrt"
  ndk_description_file = "./ffrt.ndk.json"
  system_capability = "SystemCapability.Resourceschedule.Ffrt.Core"
  system_capability_headers = [
    "ffrt/condition_variable.h",
    "ffrt/loop.h",
    "ffrt/mutex.h",
    "ffrt/queue.h",
    "ffrt/sleep.h",
    "ffrt/task.h",
    "ffrt/timer.h",
    "ffrt/type_def.h",
  ]
}
