# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_ndk_library("libasset_ndk") {
  output_name = "asset_ndk"
  output_extension = "z.so"
  ndk_description_file = "./libasset.ndk.json"
  min_compact_version = "11"
  system_capability = "SystemCapability.Security.Asset"
  system_capability_headers = [
    "inc/asset_api.h",
    "inc/asset_type.h",
  ]
}

ohos_ndk_headers("asset_header") {
  dest_dir = "$ndk_headers_out_dir/asset"
  sources = [
    "inc/asset_api.h",
    "inc/asset_type.h",
  ]
}
