# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/netmanager_base/netmanager_base_config.gni")

ohos_ndk_library("libnet_connection") {
  output_name = "net_connection"
  output_extension = "so"
  ndk_description_file = "./libnet_connection.ndk.json"
  min_compact_version = "1"
  system_capability = "SystemCapability.Communication.NetManager.Core"
  system_capability_headers = [ "./include/native_net_conn_api.h" ]
}

ohos_ndk_headers("netconn_header") {
  dest_dir = "$ndk_headers_out_dir/netconn"
  sources = [ "./include/native_net_conn_api.h" ]
}

ohos_shared_library("net_connection") {
  output_extension = "so"
  include_dirs =
      [ "$NETMANAGER_BASE_ROOT/interfaces/kits/c/netconnclient/include" ]

  sources = [ "$NETMANAGER_BASE_ROOT/interfaces/kits/c/netconnclient/src/native_net_conn_api.cpp" ]

  deps = [
    "$INNERKITS_ROOT/netconnclient:net_conn_manager_if",
    "$NETMANAGER_BASE_ROOT/utils:net_manager_common",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  part_name = "netmanager_base"
  subsystem_name = "communication"
  relative_install_dir = "ndk"
}
