# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_ndk_headers("GLES2_header") {
  dest_dir = "$ndk_headers_out_dir/GLES2"
  sources = [
    "../../../third_party/openGLES/GLES2/gl2.h",
    "../../../third_party/openGLES/GLES2/gl2ext.h",
    "../../../third_party/openGLES/GLES2/gl2platform.h",
  ]
}

ohos_ndk_library("libGLESv2_ndk") {
  output_name = "GLESv2"
  output_extension = "so"
  ndk_description_file = "./libGLESv2.ndk.json"
  system_capability = "SystemCapability.Graphic.Graphic2D.GLES2"
  system_capability_headers = [
    "GLES2/gl2.h",
    "GLES2/gl2ext.h",
    "GLES2/gl2platform.h",
  ]
}
