# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")
import("//foundation/graphic/graphic_2d/graphic_config.gni")

ohos_ndk_headers("native_drawing_header") {
  dest_dir = "$ndk_headers_out_dir/native_drawing"
  sources = [
    "$graphic_2d_root/rosen/modules/2d_graphics/include/c/drawing_bitmap.h",
    "$graphic_2d_root/rosen/modules/2d_graphics/include/c/drawing_brush.h",
    "$graphic_2d_root/rosen/modules/2d_graphics/include/c/drawing_canvas.h",
    "$graphic_2d_root/rosen/modules/2d_graphics/include/c/drawing_color.h",
    "$graphic_2d_root/rosen/modules/2d_graphics/include/c/drawing_font_collection.h",
    "$graphic_2d_root/rosen/modules/2d_graphics/include/c/drawing_path.h",
    "$graphic_2d_root/rosen/modules/2d_graphics/include/c/drawing_pen.h",
    "$graphic_2d_root/rosen/modules/2d_graphics/include/c/drawing_register_font.h",
    "$graphic_2d_root/rosen/modules/2d_graphics/include/c/drawing_text_declaration.h",
    "$graphic_2d_root/rosen/modules/2d_graphics/include/c/drawing_text_typography.h",
    "$graphic_2d_root/rosen/modules/2d_graphics/include/c/drawing_types.h",
  ]
}

ohos_ndk_library("libnative_drawing_ndk") {
  output_name = "native_drawing"
  output_extension = "so"
  ndk_description_file = "./libnative_drawing.ndk.json"
  system_capability = "SystemCapability.Graphic.Graphic2D.NativeDrawing"
  system_capability_headers = [
    "native_drawing/drawing_bitmap.h",
    "native_drawing/drawing_brush.h",
    "native_drawing/drawing_canvas.h",
    "native_drawing/drawing_color.h",
    "native_drawing/drawing_font_collection.h",
    "native_drawing/drawing_path.h",
    "native_drawing/drawing_pen.h",
    "native_drawing/drawing_text_declaration.h",
    "native_drawing/drawing_text_typography.h",
    "native_drawing/drawing_types.h",
    "native_drawing/drawing_register_font.h",
  ]
}
