# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_ndk_headers("native_drawing_header") {
  dest_dir = "$ndk_headers_out_dir/native_drawing"
  sources = [
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_bitmap.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_brush.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_canvas.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_color.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_color_filter.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_color_space.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_filter.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_font.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_font_collection.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_font_mgr.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_gpu_context.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_image.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_mask_filter.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_matrix.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_memory_stream.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_path.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_path_effect.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_pen.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_pixel_map.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_point.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_rect.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_region.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_register_font.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_round_rect.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_sampling_options.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_shader_effect.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_surface.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_text_blob.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_text_declaration.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_text_typography.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_typeface.h",
    "//interface/sdk_c/graphic/graphic_2d/native_drawing/drawing_types.h",
  ]
}

ohos_ndk_library("libnative_drawing_ndk") {
  output_name = "native_drawing"
  output_extension = "so"
  ndk_description_file = "./libnative_drawing.ndk.json"
  system_capability = "SystemCapability.Graphic.Graphic2D.NativeDrawing"
  system_capability_headers = [
    "native_drawing/drawing_bitmap.h",
    "native_drawing/drawing_brush.h",
    "native_drawing/drawing_canvas.h",
    "native_drawing/drawing_color.h",
    "native_drawing/drawing_color_filter.h",
    "native_drawing/drawing_color_space.h",
    "native_drawing/drawing_filter.h",
    "native_drawing/drawing_font.h",
    "native_drawing/drawing_font_collection.h",
    "native_drawing/drawing_font_mgr.h",
    "native_drawing/drawing_gpu_context.h",
    "native_drawing/drawing_mask_filter.h",
    "native_drawing/drawing_matrix.h",
    "native_drawing/drawing_memory_stream.h",
    "native_drawing/drawing_path.h",
    "native_drawing/drawing_path_effect.h",
    "native_drawing/drawing_pen.h",
    "native_drawing/drawing_pixel_map.h",
    "native_drawing/drawing_point.h",
    "native_drawing/drawing_rect.h",
    "native_drawing/drawing_region.h",
    "native_drawing/drawing_register_font.h",
    "native_drawing/drawing_round_rect.h",
    "native_drawing/drawing_image.h",
    "native_drawing/drawing_sampling_options.h",
    "native_drawing/drawing_shader_effect.h",
    "native_drawing/drawing_surface.h",
    "native_drawing/drawing_text_blob.h",
    "native_drawing/drawing_text_declaration.h",
    "native_drawing/drawing_text_typography.h",
    "native_drawing/drawing_typeface.h",
    "native_drawing/drawing_types.h",
  ]
}
