# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_ndk_headers("vulkan_header") {
  dest_dir = "$ndk_headers_out_dir/vulkan"
  sources = [
    "//interface/sdk_c/third_party/vulkan-headers/vulkan/vk_platform.h",
    "//interface/sdk_c/third_party/vulkan-headers/vulkan/vulkan.h",
    "//interface/sdk_c/third_party/vulkan-headers/vulkan/vulkan_core.h",
    "//interface/sdk_c/third_party/vulkan-headers/vulkan/vulkan_ohos.h",
  ]
}

ohos_ndk_library("libvulkan_ndk") {
  output_name = "vulkan"
  output_extension = "so"
  ndk_description_file = "./libvulkan.ndk.json"
  system_capability = "SystemCapability.Graphic.Vulkan"
  system_capability_headers = [
    "vulkan/vk_platform.h",
    "vulkan/vulkan.h",
    "vulkan/vulkan_core.h",
    "vulkan/vulkan_ohos.h",
  ]
}
